# matea-switcher

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.flutter-code/sessions/: 59be1c1c-a6cd-415f-8755-b078c2ea07a6.json
docs/: ARCHITECTURE.md  NEXT_STEPS.md  keyd-setup.md  v02_llm_plan.md
docs/milestones/: M10_systemd_unit.md  M11_context_bias.md  M5_uinput_rewriter.md  M5b_dynamic_layout_index.md  M5c_self_echo_and_race.md  M5d_eviocgrab.md  M6_atspi.md  M7_classifier_hardening.md  M8_hotkey_toggle.md  M9_config.md  M9c_apply_config.md
docs/qwen-tasks/: README.md  T1_v2_iteration_after_review.md  T1_xkb_layout_sync.md  T2_kwin_active_window.md  T3_manual_flip_hotkey.md  T4_keyd_echo_loop.md
scripts/: install.sh  setup-keyd.sh  uninstall.sh
src/: classifier.rs  config.rs  context.rs  main.rs  mapper.rs
src/platform/: atspi.rs  keyd_detect.rs  kwin.rs  linux.rs  mod.rs  uinput.rs  xkb.rs
systemd/: matea-switcher.service
