[package]
name = "matea-switcher"
version = "0.1.0"
edition = "2024"
authors = ["creonuae"]
description = "AI-powered keyboard layout switcher and input correction (RU/EN bilingual)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/creonuae/matea-switcher"
readme = "README.md"

[dependencies]
# Async runtime — пригодится для AT-SPI listeners + KWin DBus signals + LLM inference
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "time"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
# Spellcheck. Привязки к C libhunspell (Fedora: hunspell-devel).
# Альтернатива — pure-Rust spellbook, если будет проблема со сборкой.
hunspell-rs = "0.4"
# KOI8-R ↔ UTF-8 conversion для Fedora ru_RU словаря (он поставляется в KOI8-R,
# а hunspell-rs API принимает UTF-8 строки; раз-конвертим при первом запуске).
encoding_rs = "0.8"

# Linux-specific (cfg-gated). На macOS/Windows подключим свои вместо этих.
[target.'cfg(target_os = "linux")'.dependencies]
evdev = { version = "0.13", features = ["tokio"] }
nix = { version = "0.29", features = ["fs", "ioctl"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
xkbcommon = "0.8"
# M6: AT-SPI для focus events, password detection, window class blacklist.
# Pure-Rust over zbus 5. Default features (connection + proxies) нам нужны;
# добавляем "tokio" чтобы zbus async backend == tokio (а не async-io).
atspi = { version = "0.30", features = ["tokio"] }
futures-lite = "2"

# llama.cpp wrapper — добавим в v0.2 когда будем встраивать LLM. Пока закомменчено.
# llama_cpp_2 = "0.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 1
debug = "line-tables-only"
